--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nuxt-jamstack",
+  "description": "MdN Cafe は、打ち合わせやリモートワークができるちょっとした空間を提供します。",
   "version": "1.0.0",
   "private": true,
   "scripts": {
